--- a/templates/polls/base.html
+++ b/templates/polls/base.html
@@ -232,10 +232,10 @@
     <footer class="p-2 text-center bg-danger">
       <p class="mt-3">
         Created By
-        <a href="simranlotey.github.io">Simranpreet Singh</a>
+        <a href="https://github.com/varshitha127">LAKKIREDDY VARSHITHA</a>
         | This Site is
         <a
-          href="https://github.com/simranlotey/Blood-Bank-Management-System.git"
+          href="https://github.com/varshitha127/Bloodbank_Project"
           target="_blank"
           >Open Source</a
         >
