--- a/templates/polls/contact.html
+++ b/templates/polls/contact.html
@@ -29,9 +29,9 @@
                   <i class="fas fa-user" style="font-size: 20px"></i>
                 </div>
                 <div class="col-10">
-                  <p style="font-size: 17px">Simranpreet Singh</p>
-                  <p style="font-size: 17px">Simarjit Singh</p>
-                  <p style="font-size: 17px">Simrandeep Singh</p>
+                  <p style="font-size: 17px">Lakkireddy Varshitha</p>
+                  <p style="font-size: 17px">P.Ashritha</p>
+                  <p style="font-size: 17px">B.Aishwarya</p>
                 </div>
                 <br /><br />
                 <div class="col-2">
